=== gedit 2.16.0 ===

2006-09-04  Paolo Maggi  <paolo@gnome.org>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.16.0 released. Updated dependencies.
	
2006-08-28  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/filebrowser/gedit-file-browser-plugin.c: disable showing
	an error message when the error occurred when setting a root directory
	automatically (either on load or when the first document is loaded)

	* plugins/filebrowser/Makefile.am:
	* plugins/filebrowser/filebrowser.schemas.in:
	* plugins/filebrowser/gedit-file-browser.schemas.in:
	
	Renamed filebrowser.schemas.in to gedit-file-browser-schemas.in

	* plugins/filebrowser/gedit-file-browser-store.c:
	* plugins/filebrowser/gedit-file-bookmarks-store.c:
	
	Removed unnecessary g_warning calls
	
	* plugins/filebrowser/gedit-file-browser-plugin.c:
	* plugins/filebrowser/gedit-file-browser-store.[ch]:
	* plugins/filebrowser/gedit-file-browser-widget.[ch]:
	
	Renamed variable 'virtual' to 'virtual_root' (since virtual is a
	C++ keyword

2006-08-27  Paolo Borelli  <pborelli@katamail.com>

	* plugins/externaltools/tools/manager.py: link updates docs.

=== gedit 2.15.9 ===

2006-08-26  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* README:
	* NEWS:

	gedit 2.15.9 released.

2006-08-26  Steve Frécinaux  <steve@istique.net>

	Fix bug #352854 – modelines should revert to pref values when a
	modeline part is removed

	* plugins/modelines/modelines.py: read parameters that are not in the
	modelines anymore from gconf.

2006-08-26  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-python-module.c:
	* gedit/gedit-window.c:

	Run the garbage collector both at the start and at the end of 
	gedit_window_dispose, in order to enforce correct object lifetime.
	Should fix bug #350776.

2006-08-25  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-tab.c: plug tiny leak when loading remote files.

2006-08-25  Paolo Borelli  <pborelli@katamail.com>

	* plugins/filebrowser/gedit-file-browser-plugin.c: