@@ -1,3 +1,9 @@
+2006-09-05  Jesse van den Kieboom  <jesse@icecrew.nl>
+
+	* plugins/filebrowser/gedit-file-browser-store.c:
+	
+	Fixed bug 354397 – crash in filebrowser plugin when going to parent dir
+
 === gedit 2.16.0 ===
 
 2006-09-04  Paolo Maggi  <paolo@gnome.org>
